Fix: add package declarations so tests can find UrlShortenerApplication
ControllerIntegrationTest was in package 'test.java.controller' and UrlShortenerApplication was in the default package. Move both into package 'controller' so the test can reference the application class.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>